# golf-booker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  justfile  tailwind.config.js
.sqlx/: query-7d786159cb0915d262123132aad5888ee300c726a88b7d261ad3534e6906c1f0.json
assets/: styles.css
migrations/: 20231122205124_setup.sql  20231123123724_events.sql
src/: golf.rs  main.rs  users.rs  web.rs
src/golf/: client.rs  repo.rs  schemas.rs
src/golf/schemas/: booking_event.rs  booking_group.rs  event.rs
src/web/: app.rs  auth.rs  event.rs  event_group.rs  protected.rs
templates/: base.html  event.html  event_group.html  index.html  login.html  protected.html
templates/components/: header.html
templates/partials/: booking_group_row.html  events_table_body.html
