[package]
name = "axum-booker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.74"
axum = "0.6.20"
axum-login = "0.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = { version = "0.11.22", features = ["cookies"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
